--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -739,6 +739,9 @@
           "label": "Show product rating",
           "info": "To display a rating, add a product rating app. [Learn more](https:\/\/help.shopify.com\/manual\/online-store\/themes\/theme-structure\/theme-features#featured-collection-show-product-rating)"
         },
+        "recommendations_instead_collection": {
+          "label": "Use recommendation instead collection"
+        },
         "enable_quick_buy": {
           "label": "Enable quick add button",
           "info": "Optimal with popup or drawer cart type."
